--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,3 @@
 sources:
   pynput-1.8.1.tar.gz: 89ee2b059b1a36ee197d64d044b9a221a40b75df
+  python-pynput-1.8.1-eggs.tar.gz: 861dd0f0e0ee54576963f454b7fbadc515288cac
